<resources>
    <string name="app_name">ASPIRE</string>
    <string name="vector">Vector</string>
    <string name="vector1">Vector1</string>
    <string name="vector2">Vector2</string>
    <string name="vector3">Vector3</string>
    <string name="vector4">Vector4</string>
    <string name="vector5">Vector5</string>
    <string name="vector6">Vector6</string>
    <string name="vector7">Vector7</string>
    <string name="vector8">Vector8</string>
    <string name="arrow">Arrow</string>
    <string name="button">Button</string>
    <string name="line">Line</string>
    <string name="line1">Line1</string>
    <string name="line2">Line2</string>


    <string name="vector9">Vector9</string>
    <string name="vector10">Vector10</string>
    <string name="vector11">Vector11</string>
    <string name="vector12">Vector12</string>
    <string name="vector13">Vector13</string>
    <string name="vector14">Vector14</string>
    <string name="vector15">Vector15</string>
    <string name="vector16">Vector16</string>
    <string name="vector17">Vector17</string>
    <string name="imageView">imageView</string>
    <string name="text1">Хотите к нам?</string>
    <string name="text2">На нашем сайте вы сможете создать собственный \n ресторан и управлять им</string>
    <string name="button2">Перейти на aspire.ua</string>
    <string name="button3">Button3</string>
    <string name="line3">Line3</string>
    <string name="line4">Line4</string>
    <string name="line5">Line5</string>


    <string name="vector18">Vector18</string>
    <string name="vector19">Vector19</string>
    <string name="vector20">Vector20</string>
    <string name="vector21">Vector21</string>
    <string name="vector22">Vector22</string>
    <string name="vector23">Vector23</string>
    <string name="vector24">Vector24</string>
    <string name="vector25">Vector25</string>
    <string name="vector26">Vector26</string>
    <string name="girl">Girl</string>
    <string name="text3">Закажем что-нибудь?</string>
    <string name="text4">На нашем сайте вы сможете создать собственный \n ресторан и управлять им</string>
    <string name="button4">Войти в свой аккаунт</string>
    <string name="button5">Я первый раз тут</string>


    <string name="vector27">Vector27</string>
    <string name="vector28">Vector28</string>
    <string name="vector29">Vector29</string>
    <string name="vector30">Vector30</string>
    <string name="vector31">Vector31</string>
    <string name="vector32">Vector32</string>
    <string name="vector33">Vector33</string>
    <string name="vector34">Vector34</string>
    <string name="vector35">Vector35</string>
    <string name="arrow2">Arrow2</string>
    <string name="text5">Вход в ресторан</string>
    <string name="EditText1"></string>
    <string name="text6">Логин</string>
    <string name="EditText2"></string>
    <string name="text7">Забыли пароль?</string>
    <string name="eye_icon">Eye Icon</string>
    <string name="button6">Войти в свой аккаунт</string>
    <string name="text8">Войти через соц сети</string>
    <string name="box">Box</string>
    <string name="telegram">Telegram</string>
    <string name="viber1">Viber1</string>
    <string name="viber2">Viber2</string>
    <string name="viber3">Viber3</string>
    <string name="viber4">Viber4</string>
    <string name="viber5">Viber5</string>
    <string name="google1">Google1</string>
    <string name="google2">Google2</string>
    <string name="google3">Google3</string>
    <string name="google4">Google4</string>
    <string name="google5">Google5</string>
    <string name="google6">Google6</string>
    <string name="text9">Еще не создавали аккаунт?</string>
    <string name="text10">Создать профиль</string>


    <string name="khinkali">Khinkali</string>
    <string name="text11">Рекомендовано</string>
    <string name="vector36">Vector36</string>
    <string name="vector37">Vector37</string>
    <string name="vector38">Vector38</string>
    <string name="vector39">Vector39</string>
    <string name="vector40">Vector40</string>
    <string name="vector41">Vector41</string>
    <string name="vector42">Vector42</string>
    <string name="vector43">Vector43</string>
    <string name="vector44">Vector44</string>
    <string name="big_line">big line</string>
    <string name="text12">ХИНКАЛИ</string>
    <string name="text13">Самые вкусные только для вас</string>
    <string name="line_main_page">line main page</string>
    <string name="box_main_page">box main page</string>
    <string name="hand_main_page">hand main page</string>
    <string name="hand_main_page2">hand main page2</string>
    <string name="new_main_page">new main page</string>
    <string name="new_main_page2">new main page2</string>
    <string name="percent_main_page">percent main page</string>
    <string name="percent_main_page2">percent main page2</string>
    <string name="percent_main_page3">percent main page3</string>
    <string name="dish">dish</string>
    <string name="dish_description">dish description</string>
    <string name="vector45">Vector45</string>
    <string name="vector46">Vector46</string>
    <string name="vector47">Vector47</string>
    <string name="vector48">Vector48</string>
    <string name="vector49">Vector49</string>
    <string name="vector50">Vector50</string>
    <string name="vector51">Vector51</string>
    <string name="vector52">Vector52</string>
    <string name="vector53">Vector53</string>
    <string name="text14">Bartolomeo</string>
    <string name="text15">10:00 20:00</string>
    <string name="star_empty">star empty</string>
    <string name="heart_empty">heart empty</string>
    <string name="bottom_box_main_page">bottom box main page</string>
    <string name="knife_and_fork_circle">knife and fork circle</string>
    <string name="fork">fork</string>
    <string name="knife">knife</string>
    <string name="search">search</string>
    <string name="waiter">waiter</string>
    <string name="waiter2">waiter2</string>
    <string name="heart_bottom">heart bottom</string>
    <string name="plate">plate</string>
    <string name="plate2">plate2</string>
    <string name="plate3">plate3</string>

</resources>